Fixed Settings bug

--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
           </div>
           <div id="weather-desc"></div>
         </div>
-        <div class="box" style="flex-direction: column; padding-block: 20px" id="news-box">
+        <div
+          class="box"
+          style="flex-direction: column; padding-block: 20px"
+          id="news-box"
+        >
           <a href="" id="news-link" style="display: block"></a>
         </div>
       </div>
